# UFRJ-CC-CompConc-22-1

Final - Substring Matcher/: CMakeLists.txt  main.cpp  sample.cpp  sample.h  substringmatcher.cpp  substringmatcher.h  substringtester.cpp  substringtester.h  timer.cpp  timer.h
Final - Substring Matcher/samples-correctness/: hackerHankTestConverter.py
Final - Substring Matcher/samples-correctness/converted/: 01_pattern.txt  05_pattern.txt  07_pattern.txt  09_pattern.txt  09_text.txt  10_pattern.txt  10_text.txt  11_text.txt  12_pattern.txt  12_text.txt  13_text.txt  14_pattern.txt  14_text.txt  15_pattern.txt  15_text.txt  16_pattern.txt  16_text.txt  17_pattern.txt  17_text.txt  18_text.txt  19_pattern.txt  19_text.txt  20_pattern.txt  20_text.txt  21_text.txt  22_text.txt  23_pattern.txt  23_text.txt  24_text.txt  25_text.txt  26_text.txt  27_pattern.txt  27_text.txt  28_pattern.txt  28_text.txt  29_pattern.txt  29_text.txt  30_pattern.txt  30_text.txt  31_text.txt  (+13 more)
Final - Substring Matcher/samples-correctness/originals/: input12.txt  input13.txt  input14.txt  input15.txt
lab01/: comp-conc.c  main.c
lab02/: main.c
lab03/: README.MD  main.c
lab04/: README.MD  main.c
lab05/: README.MD  main.c
lab06/: README.MD  main.c
lab07/: Lab07.java  README.MD
